--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,12 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
+  height: 100vh;
+  width: 100vw;
+  background-color: #282c34;
+  overflow-x: hidden;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +18,40 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+/* body {
+  overflow: hidden;
+} */
+
+html {
+  height: 100vh;
+  width: 100vw;
+  background-color: #282c34;
+  overflow-x: hidden;
+  }
+/* 
+body {
+  height: 100vh;
+  width: 100vw;
+  background-color: #282c34;
+  overflow-x: hidden;
+  } */
+
+/* #footer{
+    height: 1em;
+    width: 100%;
+    background-color: #282c34;
+    margin-bottom: 1em;
+} */
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
 }
