Fixed a couple bugs

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,15 +1,13 @@
-/* @tailwind base;
-@tailwind components;
-@tailwind utilities; */
+
 
 .App {
   text-align: center;
 }
-
+/* 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
+} */
 
 
 .App-header {
@@ -32,11 +30,11 @@
   text-decoration: underline;
 }
 
-@keyframes App-logo-spin {
+/* @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
   }
-}
+} */
